--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.3",
+    "react-overlays": "^0.7.0",
     "react-router-dom": "^4.1.1",
     "tcomb-form": "^0.9.16"
   }
