--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-jest": "^19.0.0",
     "babel-preset-react-app": "^2.2.0",
     "jest": "^19.0.2",
+    "jsonschema": "^1.1.1",
     "nodemon": "^1.11.0",
     "react-test-renderer": "^15.5.4"
   },
