--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "build-css": "./compile-less",
     "watch-css": "nodemon --delay 1 -e '.less' -x './compile-less'",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "PORT=3006 npm-run-all -p watch-css start-js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
