--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-modal-bootstrap": "^1.1.1",
     "react-overlays": "^0.7.0",
     "react-router-dom": "^4.1.1",
+    "react-table": "^6.1.0",
     "tcomb-form": "^0.9.16"
   }
 }
