--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "yargs": "^8.0.2"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "js-yaml": "^3.9.1",
     "markdown-it": "^8.4.0",
     "martingale-utils": "^0.0.1",
