Add support for un/check all to table and tableActions support

--- a/package.json
+++ b/package.json
@@ -20,26 +20,29 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^19.0.0",
     "babel-preset-react-app": "^2.2.0",
-    "documentation": "^5.3.1",
+    "documentation": "^5.3.5",
     "jest": "^19.0.2",
-    "jsonschema": "^1.2.0",
-    "nodemon": "^1.12.0",
-    "react-test-renderer": "^15.6.1",
+    "jsonschema": "^1.2.2",
+    "nodemon": "^1.14.12",
+    "react-test-renderer": "^15.6.2",
     "yargs": "^8.0.2"
   },
   "dependencies": {
     "highlight.js": "^9.12.0",
-    "js-yaml": "^3.9.1",
+    "js-yaml": "^3.10.0",
     "markdown-it": "^8.4.0",
     "martingale-utils": "^0.0.1",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5",
-    "react-jsonschema-form": "^0.48.2",
+    "output-file-sync": "^2.0.0",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
+    "react-icon-base": "^2.1.2",
+    "react-icons": "^2.2.7",
+    "react-jsonschema-form": "^1.0.0",
     "react-modal-bootstrap": "^1.1.1",
-    "react-overlays": "^0.7.0",
+    "react-overlays": "^0.8.3",
     "react-router-dom": "^4.2.2",
-    "react-table": "^6.5.3"
+    "react-table": "^6.7.6",
+    "uuid": "^3.2.1"
   }
 }
