--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@martingale/ui-components",
   "version": "0.0.2",
-  "description": "Collection of all of the base UI components used within Martingale",
+  "description":
+    "Collection of all of the base UI components used within Martingale",
   "main": "index.js",
-  "repository": "https://github.com/pearsontechnology/martingale-ui-components.git",
+  "repository":
+    "https://github.com/pearsontechnology/martingale-ui-components.git",
   "author": "Jeremy Darling <jeremy.darling@pearson.com>",
   "license": "Apache-2.0",
   "scripts": {
@@ -14,7 +16,8 @@
     "prepublish": "npm run test",
     "start": "nodemon --watch src --exec 'yarn compile'",
     "doc_dev": "NODE_ENV=production documentation serve -w src/index.js",
-    "doc": "mkdir -p docs && NODE_ENV=production documentation build src/index.js --format md > docs/readme.md"
+    "doc":
+      "mkdir -p docs && NODE_ENV=production documentation build src/index.js --format md > docs/readme.md"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -25,6 +28,7 @@
     "jsonschema": "^1.2.2",
     "nodemon": "^1.14.12",
     "react-test-renderer": "^15.6.2",
+    "@martingale/page-schema": "0.0.3",
     "yargs": "^8.0.2"
   },
   "dependencies": {
